--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <section class="main">
     <div class="left">
-      <img src="C:\Users\DELL\OneDrive\Pictures\siddu.jpg" alt="Siddivinayak's profile" />
+      <img src="siddu.jpg" alt="Siddivinayak's profile" />
     </div>
     <div class="right">
       <h2>Hi, It's <span>Siddivinayak</span></h2>
